--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,9 @@
             "name": "viniciusam",
             "email": "viniciusam.22@gmail.com"
         }
-    ]
+    ],
+  "require": {
+    "ext-pdo": "*",
+        "vlucas/phpdotenv": "^5.6"
+  }
 }
