--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
             "email": "viniciusam.22@gmail.com"
         }
     ],
-  "require": {
-    "ext-pdo": "*",
+    "require": {
+        "ext-pdo": "*",
         "vlucas/phpdotenv": "^5.6"
-  }
+    },
+    "autoload": {
+        "psr-4": {
+            "Models\\": "src/Models/",
+            "Helpers\\": "src/Helpers/"
+        }
+    }
 }
