--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "psr-4": {
             "Models\\": "src/Models/",
             "Helpers\\": "src/Helpers/",
+            "Traits\\": "src/Traits",
+            "Classes\\": "src/Classes",
             "Database\\": "Database/"
         }
     }
